--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,31 @@
+attrs==24.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+h11==0.14.0
+html5lib==1.1
 idna==3.10
+lxml==5.3.0
+numpy==2.1.3
+outcome==1.3.0.post0
+pandas==2.2.3
+pycparser==2.22
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
 requests==2.32.3
+selenium==4.26.1
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.2.3
+webencodings==0.5.1
+websocket-client==1.8.0
+wsproto==1.2.0
